--- a/team.css
+++ b/team.css
@@ -13,6 +13,7 @@
   background: #fff;
   padding: 40px 50px 80px;
   overflow: hidden;
+  background: url("foto-team/photoshop_0017-copy.jpg") no-repeat center / cover;
 }
 
 .team-title {
@@ -57,7 +58,6 @@
 
 .team__item {
   width: 25%;
-  padding: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -69,7 +69,7 @@
 .team__item--description {
   min-height: 150px;
   width: 190px;
-  background: #222b47;
+  background: #222b47c4;
   color: #fff;
   position: relative;
   display: inline-block;
@@ -83,7 +83,7 @@
   position: absolute;
   left: 0;
   bottom: -55px;
-  border-top: 55px solid #222b47;
+  border-top: 55px solid #222b47c4;
   border-left: 95px solid transparent;
   border-right: 95px solid transparent;
 }
@@ -234,9 +234,9 @@
 }
 
 @media (min-width: 320px) {
-  .team-container {
-    padding: 0;
-  }
+  /*.team-container {*/
+    /*padding: 0;*/
+  /*}*/
   .team__item,
   .team__item:nth-child(n+5) {
     width: 100%;
@@ -244,27 +244,33 @@
 }
 
 @media (min-width: 446px) {
-  .team-container {
-    padding: 0;
-  }
+  /*.team-container {*/
+    /*padding: 0;*/
+  /*}*/
   .team__item,
   .team__item:nth-child(n+5) {
     width: 50%;
   }
 }
 @media (min-width: 638px) {
-  .team-container {
-    padding: 0;
-  }
+  /*.team-container {*/
+    /*padding: 0;*/
+  /*}*/
   .team__item {
     width: 33%;
   }
+  .team__item:nth-child(4) {
+    width: 50%;
+  }
 }
 @media (min-width: 826px) {
-  .team-container {
-    padding: 0;
-  }
+  /*.team-container {*/
+    /*padding: 0;*/
+  /*}*/
   .team__item {
+    width: 25%;
+  }
+  .team__item:nth-child(4) {
     width: 25%;
   }
   .team__item:nth-child(n+5) {
