--- a/team.css
+++ b/team.css
@@ -188,7 +188,7 @@
   background-image: url(foto-team/photoshop_005.jpg);
 }
 .member-6 .hexagon {
-  background-image: url(foto-team/photoshop_004.jpg);
+  background-image: url(foto-team/photoshop_0017-1-copy.jpg);
 }
 
 
