--- a/team.css
+++ b/team.css
@@ -185,6 +185,9 @@
   background-image: url(foto-team/photoshop_001_boss.jpg);
 }
 .member-4 .hexagon {
+  background-image: url(foto-team/photoshop_005.jpg);
+}
+.member-4 .hexagon {
   background-image: url(foto-team/photoshop_0017-1-copy.jpg);
 }
 .member-6 .hexagon {
