--- a/team.css
+++ b/team.css
@@ -286,3 +286,40 @@
 .owl-carousel .owl-stage-outer {
   overflow: visible !important;
 }
+
+/*header-------------*/
+
+.main-header__top-banner {
+  background-image: url(img/general/top-banner-bg-2.jpg);
+}
+
+.main-header__nav__list {
+  height: 60px;
+}
+
+.main-header__menu-bg {
+  background-color: rgb(255, 8, 68);
+  position: relative;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 60px;
+  z-index: 1;
+}
+
+.main-header__nav__list--item.logo {
+  margin-bottom: 0;
+  margin-top: 250px;
+  margin-right: 20px;
+}
+
+.main-header__nav__list--item {
+  margin-bottom: -60px;
+  margin-top: -142px;
+}
+
+.img-phone {
+  position: relative;
+  top: -5px;
+  right: -10px;
+}
