--- a/team.css
+++ b/team.css
@@ -289,11 +289,8 @@
 
 /*header-------------*/
 
-.main-header__top-banner {
-  background-image: url(img/general/top-banner-bg-2.jpg);
-}
-
 .main-header__nav__list {
+  width: 100%;
   height: 60px;
 }
 
@@ -311,6 +308,7 @@
   margin-bottom: 0;
   margin-top: 250px;
   margin-right: 20px;
+  z-index: 100;
 }
 
 .main-header__nav__list--item {
@@ -323,3 +321,158 @@
   top: -5px;
   right: -10px;
 }
+
+.main-header ul {
+  margin-bottom: 0;
+}
+
+.owl-carousel {
+  z-index: 0;
+}
+
+.main-header__top-banner {
+  background: none;
+  overflow: hidden;
+  display: inline-block;
+  position: relative;
+}
+
+.main-header__top-banner--slide1,
+.main-header__top-banner--slide2,
+.main-header__top-banner--slide3  {
+  width: 100%;
+  display: inline-block;
+  min-height: 540px;
+  max-height: 540px;
+}
+
+.main-header__top-banner--slide1 {
+  background: url(img/general/top-banner-bg-1.jpg) no-repeat center;
+}
+.main-header__top-banner--slide2 {
+  background: url(img/general/top-banner-bg-2.jpg) no-repeat center;
+}
+.main-header__top-banner--slide3 {
+  background: url(img/general/top-banner-bg-3.jpg) no-repeat center;
+}
+
+.main-header__top-banner .slider-content {
+  width: 634px;
+  height: 245px;
+  position: absolute;
+  top: 175px;
+  left: 508px;
+  z-index: 541;
+  /*outline: red solid 3px;*/
+}
+
+.main-header__top-banner--slide1 h3 {
+  color: rgb(232, 7, 62) !important;
+}
+.main-header__top-banner h3 {
+  font-size: 53px;
+  font-family: "OpenSans";
+  color: rgb(255, 255, 255);
+  font-weight: bold;
+  line-height: 1.273;
+  position: relative;
+  display: inline-block;
+}
+
+.main-header__top-banner .btn-top-banner {
+  background-color: transparent;
+  border: none;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#ffb199), color-stop(#ff957d), color-stop(#f76), color-stop(#ff5253), to(#ff0844));
+  background-image: -o-linear-gradient(top, #ffb199, #ff957d, #f76, #ff5253, #ff0844);
+  background-image: linear-gradient(to bottom, #ffb199, #ff957d, #f76, #ff5253, #ff0844);
+  border-radius: 50px;
+  color: #fff;
+  font-size: 24px;
+  font-family: OpenSansBold;
+  text-transform: uppercase;
+  -webkit-box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.41), inset 0px 0px 6px 0px rgba(0, 0, 0, 0.05);
+  box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.41), inset 0px 0px 6px 0px rgba(0, 0, 0, 0.05);
+  -moz-box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.41), inset 0px 0px 6px 0px rgba(0, 0, 0, 0.05);
+  box-shadow0px: 4px 10px 0px rgba(0, 0, 0, 0.41), inset 0px 0px 6px 0px rgba(0, 0, 0, 0.05);
+  width: 247px;
+  height: 65px;
+  display: block;
+  position: absolute;
+  top: 175px;
+  z-index: 543;
+}
+.main-header__top-banner .btn-top-banner:hover {
+  opacity: 0.8;
+  cursor: pointer;
+}
+
+.mainForm__input-name,
+.mainForm__input-tel {
+  border-radius: 50px;
+  width: 358px;
+  height: 48px;
+  min-width: 340px;
+  border: 1px solid rgb(255, 255, 255);
+  background-color: transparent;
+  font-size: 16px;
+  line-height: 24px;
+  color: #fff;
+  font-family: OpenSansRegular, sans-serif;
+  outline: none;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  padding-left: 15px;
+  margin: 15px 0;
+}
+.mainForm__input-name:hover,
+.mainForm__input-tel:hover {
+  border: 1px solid rgb(255, 8, 68);
+}
+
+.main-form__form {
+  width: 370px;
+  display: inline-flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.main-form__form i {
+  font-size: 14px;
+  font-family: "OpenSans", sans-serif;
+  color: rgb(174, 174, 174);
+  line-height: 1.2;
+  text-align: right;
+  margin-bottom: 30px;
+}
+.main-form__form .g-btn {
+  margin-bottom: 15px;
+  margin-top: 15px;
+}
+.main-form__title {
+  width: 600px;
+  font-size: 60px;
+  font-family: "OpenSans", sans-serif;
+  color: rgb(255, 255, 255);
+  font-weight: bold;
+  line-height: 1.2;
+  text-align: left;
+  text-transform: initial;
+}
+.main-form__title h2 {
+  font-size: 60px;
+  font-family: "OpenSans", sans-serif;
+  color: rgb(255, 255, 255);
+  font-weight: bold;
+  line-height: 1.2;
+}
+.main-form__title span {
+  font-size: 25px;
+}
+
+.container.container--narrow {
+   padding-right: 0;
+}
+/*.main-aside {*/
+  /*top: 337px*/
+/*}*/
