--- a/team.css
+++ b/team.css
@@ -361,7 +361,7 @@
   height: 245px;
   position: absolute;
   top: 175px;
-  left: 508px;
+  left: 40%;
   z-index: 541;
   /*outline: red solid 3px;*/
 }
@@ -470,9 +470,95 @@
   font-size: 25px;
 }
 
-.container.container--narrow {
-   padding-right: 0;
+.main-form .container .container--narrow {
+  padding-right: 0;
+  /*position: relative;*/
+  /*width: 100%;*/
+  /*max-width: 1920px;*/
+  /*margin: 0 auto;*/
+  /*display: -webkit-box;*/
+  /*display: -ms-flexbox;*/
+  /*display: flex;*/
 }
 /*.main-aside {*/
   /*top: 337px*/
 /*}*/
+
+.main-aside__orange.open {
+  display: block;
+  z-index: 100;
+}
+
+/*hamburger-------------------------------------------*/
+.hamburger {
+  font: inherit;
+  display: inline-block;
+  overflow: visible;
+  margin: 0;
+  padding: 15px;
+  cursor: pointer;
+  transition-timing-function: linear;
+  transition-duration: .15s;
+  transition-property: opacity,filter;
+  text-transform: none;
+  color: inherit;
+  border: 0;
+  background-color: transparent;
+}
+.hamburger:hover {
+  opacity: .7
+}
+.hamburger-box {
+  position: relative;
+  display: inline-block;
+  width: 40px;
+  height: 24px
+}
+.hamburger-inner {
+  top: 50%;
+  display: block;
+  margin-top: -2px
+}
+.hamburger-inner,.hamburger-inner:after,.hamburger-inner:before {
+  position: absolute;
+  width: 40px;
+  height: 4px;
+  transition-timing-function: ease;
+  transition-duration: .15s;
+  transition-property: transform;
+  border-radius: 4px;
+  background-color: #fff;
+}
+.hamburger-inner:after,.hamburger-inner:before {
+  display: block;
+  content: ""
+}
+.hamburger-inner:before {
+  top: -10px
+}
+.hamburger-inner:after {
+  bottom: -10px
+}
+.hamburger--slider .hamburger-inner {
+  top: 2px
+}
+.hamburger--slider .hamburger-inner:before {
+  top: 10px;
+  transition-timing-function: ease;
+  transition-duration: .15s;
+  transition-property: transform,opacity
+}
+.hamburger--slider .hamburger-inner:after {
+  top: 20px
+}
+.hamburger--slider.is-active .hamburger-inner {
+  transform: translate3d(0,10px,0) rotate(45deg)
+}
+.hamburger--slider.is-active .hamburger-inner:before {
+  transform: rotate(-45deg) translate3d(-5.71429px,-6px,0);
+  opacity: 0
+}
+.hamburger--slider.is-active .hamburger-inner:after {
+  transform: translate3d(0,-20px,0) rotate(-90deg)
+}
+
