--- a/team.css
+++ b/team.css
@@ -627,6 +627,14 @@
   margin: 0;
   position: absolute;
   top: 17px;
+  min-width: 100px;
+  min-height: 100px;
+}
+
+.main-header__nav .hamburger {
+  position: absolute;
+  right: 1.5%;
+  top: 3px;
 }
 
 @media (max-width: 1200px) {
@@ -635,13 +643,30 @@
   }
 }
 
+@media (max-width: 768px) {
+  .main-header__nav__list {
+    -webkit-box-pack: start;
+    -ms-flex-pack: start;
+    justify-content: start;
+  }
+}
+@media (max-width: 1200px) {
+  .main-header__nav__list {
+    padding: 20px 0;
+  }
+}
+
 @media (min-width: 768px) {
   .main-header__menu-bg .container {
-     max-width: 100%;
+     max-width: 95%;
+  }
+  .main-header__nav .hamburger {
+    display: none;
   }
 }
 @media (min-width: 576px) {
   .main-header__menu-bg .container {
-     max-width: 100%;
+     max-width: 95%;
   }
 }
+
