--- a/style.css
+++ b/style.css
@@ -1175,10 +1175,7 @@ main {
     min-height: 24px;
 }
 
-.main-aside__blue--close height
-
-24
-px img {
+img {
     width: 100%;
     max-width: 24px;
     min-height: 24px;
@@ -1417,7 +1414,7 @@ px img {
     display: block;
     color: #aeaeae;
     font-size: 14px;
-    font-family: OpenSansBold;
+    font-family: OpenSansBold, sans-serif;
     padding-top: 10px;
 }
 
@@ -1449,7 +1446,7 @@ px img {
     padding: 10px 0;
     color: #aeaeae;
     font-size: 14px;
-    font-family: OpenSansBold;
+    font-family: OpenSansBold, sans-serif;
 }
 
 .main-footer__contscts__email:before {
@@ -1491,7 +1488,7 @@ px img {
     text-transform: uppercase;
     color: #fff;
     font-size: 14px;
-    font-family: OpenSansBold;
+    font-family: OpenSansBold, sans-serif;
 }
 
 .main-form {
@@ -1582,33 +1579,33 @@ px img {
 .main-form__left__user-controls__info__lang--item a {
     color: #aeaeae;
     font-size: 12px;
-    font-family: OpenSansBold;
+    font-family: OpenSansBold, sans-serif;
     text-transform: uppercase;
 }
 
 .main-form__left__user-controls__info--phone {
     font-size: 18px;
-    font-family: OpenSansBold;
+    font-family: OpenSansBold, sans-serif;
     color: #ff0844;
 }
 
 .main-form__left__titles {
     font-size: 60px;
-    font-family: OpenSansBold;
+    font-family: OpenSansBold, sans-serif;
     color: #fff;
     margin-bottom: 29px;
 }
 
 .main-form__left__title {
     font-size: 60px;
-    font-family: OpenSansBold;
+    font-family: OpenSansBold, sans-serif;
     color: #fff;
     margin-bottom: 29px;
 }
 
 .main-form__left__title b {
     font-size: 60px;
-    font-family: OpenSansBold;
+    font-family: OpenSansBold, sans-serif;
     color: #ff0844;
     margin-bottom: 29px;
 }
@@ -1616,7 +1613,7 @@ px img {
 .main-form__left__subtitle {
     color: #fff;
     font-size: 24px;
-    font-family: OpenSansRegular;
+    font-family: OpenSansRegular, sans-serif;
 }
 
 .main-form__right {
@@ -1991,7 +1988,7 @@ px img {
     max-height: 400px;
     background-image: url("img/general/uniqueness-bg.jpg");
     background-size: cover;
-    background-position: cebter center;
+    background-position: center center;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -2057,7 +2054,7 @@ px img {
     max-height: 600px;
     background-image: url("img/general/advantages-bg.jpg");
     background-size: cover;
-    background-position: cebter center;
+    background-position: center center;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -2351,7 +2348,7 @@ px img {
 .last--title {
     color: #fff;
     font-size: 24px;
-    font-family: OpenSansBold;
+    font-family: OpenSansBold, sans-serif;
     letter-spacing: 1.2px;
     text-align: right;
     text-transform: uppercase;
@@ -2383,7 +2380,7 @@ px img {
 }
 
 .item-hover--title {
-    font-family: OpenSansBold;
+    font-family: OpenSansBold, sans-serif;
     font-size: 30px;
     text-transform: uppercase;
     color: #fff;
@@ -2393,10 +2390,10 @@ px img {
 
 .item-hover--subtitle {
     position: relative;
-    font-family: OpenSansRegular;
+    font-family: OpenSansRegular, sans-serif;
     font-size: 18px;
     color: #fff;
-    letter-spacing: 0.8;
+    letter-spacing: 0.8px;
     text-align: center;
     margin-bottom: 60px;
 }
@@ -2904,7 +2901,7 @@ px img {
 
 .excellence__blue__info--descr {
     font-size: 14px;
-    font-family: OpenSansRegular;
+    font-family: OpenSansRegular, sans-serif;
     letter-spacing: 0.7px;
     color: #aeaeae;
 }
@@ -2972,7 +2969,7 @@ px img {
 .excellence__red__info--title {
     position: relative;
     font-size: 36px;
-    font-family: OpenSansBold;
+    font-family: OpenSansBold, sans-serif;
     letter-spacing: 1.8px;
     color: #fff;
     margin-bottom: 55px;
@@ -2983,7 +2980,7 @@ px img {
     position: absolute;
     content: '';
     bottom: -30px;
-    right: 0px;
+    right: 0;
     width: 68px;
     height: 2px;
     background-color: #222b47;
@@ -2998,7 +2995,7 @@ px img {
 }
 
 .excellence__red_img {
-    overflow: heidden;
+    overflow: heiden;
     width: 100%;
     max-width: 945px;
 }
@@ -3027,7 +3024,7 @@ px img {
     background-image: url("img/general/reb-btn.png");
     background-size: cover;
     font-size: 14px;
-    font-family: OpenSansBold;
+    font-family: OpenSansBold, sans-serif;
     text-transform: uppercase;
     color: #222b47;
     padding-bottom: 55px;
@@ -3442,7 +3439,7 @@ px img {
     color: #fff;
     font-size: 14px;
     letter-spacing: 0.7px;
-    font-family: OpenSansRegular;
+    font-family: OpenSansRegular, sans-serif;
     max-width: 360px;
     width: 100%;
 }
@@ -3490,7 +3487,7 @@ px img {
     -ms-flex-align: center;
     align-items: center;
     position: absolute;
-    bottom: 0px;
+    bottom: 0;
     right: 50%;
 }
 
@@ -4080,7 +4077,6 @@ px img {
     }
 
     .excellence__blue__info {
-        background-image: url("none");
         background-color: #222b47;
         width: 100%;
         max-width: 100%;
@@ -4108,7 +4104,6 @@ px img {
     }
 
     .excellence__red__info {
-        background-image: url("none");
         background-color: #ff0844;
         width: 100%;
         max-width: 100%;
