--- a/style.css
+++ b/style.css
@@ -1175,12 +1175,6 @@ main {
     min-height: 24px;
 }
 
-img {
-    width: 100%;
-    max-width: 24px;
-    min-height: 24px;
-    height: 100%;
-}
 
 .aside-dots {
     display: -webkit-box;
@@ -1925,7 +1919,7 @@ img {
 .quality:after {
     content: '';
     position: absolute;
-    bottom: 0;
+    bottom: -6px;
     left: -204px;
     width: 100%;
     height: 100%;
@@ -5023,7 +5017,7 @@ img {
 }
 
 .container.container--narrow{
-    padding-right: 2%;
+    padding-right: 15px;
 }
 
 @media (max-width: 1200px){
@@ -5208,7 +5202,7 @@ img {
 @media (max-width: 480px){
 
     .container.container--narrow{
-        padding-right: 60px;
+        padding-right: 75px;
     }
 
     .formAdvantages__item, .variantsBlock, .variantsBlock__item{
