--- a/team.css
+++ b/team.css
@@ -347,22 +347,25 @@
 }
 
 .main-header__top-banner--slide1 {
-  background: url(img/general/top-banner-bg-1.jpg) no-repeat center;
+  background: url(img/general/top-banner-bg-1.jpg) no-repeat top / cover;
 }
 .main-header__top-banner--slide2 {
-  background: url(img/general/top-banner-bg-2.jpg) no-repeat center;
+  background: url(img/general/top-banner-bg-2.jpg) no-repeat top / cover;
 }
 .main-header__top-banner--slide3 {
-  background: url(img/general/top-banner-bg-3.jpg) no-repeat center;
+  background: url(img/general/top-banner-bg-3.jpg) no-repeat top / cover;
 }
 
 .main-header__top-banner .slider-content {
-  width: 634px;
-  height: 245px;
+  width: 100%;
+  height: 100%;
+  max-width: 634px;
+  max-height: 245px;
   position: absolute;
-  top: 175px;
-  left: 40%;
-  z-index: 541;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
   /*outline: red solid 3px;*/
 }
 
@@ -408,10 +411,10 @@
 
 .mainForm__input-name,
 .mainForm__input-tel {
+  width: 100%;
   border-radius: 50px;
-  width: 358px;
+  max-width: 358px;
   height: 48px;
-  min-width: 340px;
   border: 1px solid rgb(255, 255, 255);
   background-color: transparent;
   font-size: 16px;
@@ -421,7 +424,7 @@
   outline: none;
   padding-top: 12px;
   padding-bottom: 12px;
-  padding-left: 15px;
+  padding-left: 20px;
   margin: 15px 0;
 }
 .mainForm__input-name:hover,
@@ -430,7 +433,8 @@
 }
 
 .main-form__form {
-  width: 370px;
+  width: auto;
+  max-width: 370px;
   display: inline-flex;
   flex-direction: column;
   align-items: center;
@@ -444,7 +448,7 @@
   font-family: "OpenSans", sans-serif;
   color: rgb(174, 174, 174);
   line-height: 1.2;
-  text-align: right;
+  text-align: center;
   margin-bottom: 30px;
 }
 .main-form__form .g-btn {
@@ -452,7 +456,8 @@
   margin-top: 15px;
 }
 .main-form__title {
-  width: 600px;
+  width: auto;
+  max-width: 600px;
   font-size: 60px;
   font-family: "OpenSans", sans-serif;
   color: rgb(255, 255, 255);
@@ -472,19 +477,29 @@
   font-size: 25px;
 }
 
-.main-form .container .container--narrow {
-  padding-right: 0;
-  /*position: relative;*/
-  /*width: 100%;*/
-  /*max-width: 1920px;*/
-  /*margin: 0 auto;*/
-  /*display: -webkit-box;*/
-  /*display: -ms-flexbox;*/
-  /*display: flex;*/
+.main-form.container.container--narrow {
+  padding-right: 15px;
+  display: flex;
+  flex-direction: row;
+
 }
-/*.main-aside {*/
-  /*top: 337px*/
-/*}*/
+
+@media (max-width: 768px) {
+  .main-form__title h2 {
+    font-size: 36px;
+  }
+  .main-form__title span {
+    font-size: 20px;
+  }
+}
+@media (max-width: 480px) {
+  .main-form__title h2 {
+    font-size: 25px;
+  }
+  .main-form__title span {
+    font-size: 15px;
+  }
+}
 
 .main-aside__orange.open {
   display: flex;
