адптив верхнего меню

--- a/team.css
+++ b/team.css
@@ -640,7 +640,7 @@
 
 .main-header__nav__list--item.logo {
   width: 20vw;
-  height: auto;
+  height: 20vw;
   max-width: 262px;
   max-height: 262px;
   z-index: 100;
