--- a/team.css
+++ b/team.css
@@ -394,7 +394,9 @@
   padding-bottom: 12px;
   padding-left: 50px;
   padding-right: 50px;
-  letter-spacing: 1px
+  letter-spacing: 1px;
+  display: flex;
+  margin: 40px auto;
 }
 
 
