--- a/style.css
+++ b/style.css
@@ -3577,7 +3577,8 @@ main {
     }
 
     main {
-        padding-right: 60px;
+        /*padding-right: 60px;*/
+      overflow: hidden;
     }
 
     .main-form {
