--- a/team.css
+++ b/team.css
@@ -1,3 +1,6 @@
+/*@import "libs/HeaderEffects/css/component.css";*/
+
+
 .team {
   margin: 0 auto;
   width: 100%;
@@ -360,7 +363,7 @@
 .main-header__top-banner .slider-content {
   width: 100%;
   height: 100%;
-  max-width: 634px;
+  max-width: 690px;
   max-height: 245px;
   position: absolute;
   top: 50%;
@@ -401,8 +404,25 @@
   margin: 40px auto;
 }
 
-
+@media (min-width: 1234px) {
+  .main-header__top-banner h3 {
+    width: 100%;
+    display: inline-block;
+    margin-top: 3%;
+    margin-left: 16%;
+  }
+}
+@media (max-width: 1100px) {
+  .main-header__top-banner h3 {
+    font-size: 43px;
+  }
+}
 @media (max-width: 768px) {
+  .img-phone {
+    position: relative;
+    top: -2px;
+    right: 10px;
+  }
   .main-header__top-banner h3 {
     font-size: 35px;
   }
@@ -421,7 +441,7 @@
 }
 @media (max-width: 425px) {
   .main-header__top-banner h3 {
-    font-size: 25px;
+    font-size: 21px;
   }
 }
 @media (min-width: 769px) {
@@ -798,4 +818,27 @@
 }
 .main-header__nav__list li:hover {
   opacity: 1;
+}
+
+.main-aside__orange {
+  padding: 90px 50px;
+  width: 100%;
+   max-width: 100%;
+   min-width: 280px;
+  background-color: #ff0844;
+  display: none;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  align-items: center;
+}
+.main-aside__orange__contacts {
+  width: auto;
+}
+.main-aside__orange__social {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin-left: 20px;
 }
