--- a/css/team.css
+++ b/css/team.css
@@ -478,11 +478,11 @@
 
 .main-form__form {
   width: auto;
-  max-width: 370px;
-  display: inline-flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  /* max-width: 370px; */
+  /* display: inline-flex; */
+  /* flex-direction: column; */
+  /* align-items: center; */
+  /* justify-content: center; */
 }
 .main-form {
   overflow: hidden;
@@ -496,8 +496,7 @@
   margin-bottom: 30px;
 }
 .main-form__form .g-btn {
-  margin-bottom: 15px;
-  margin-top: 15px;
+  margin: 40px auto;
 }
 .main-form__title {
   width: auto;
@@ -841,4 +840,44 @@
   display: flex;
   justify-content: center;
   margin-left: 20px;
+}
+
+
+
+/*.main-footer__up-btn {*/
+
+  /*position: fixed;*/
+  /*display: block;*/
+  /*width: 40px;*/
+  /*height: 40px;*/
+  /*border-radius: 100%;*/
+  /*-webkit-transition: all .3s;*/
+  /*transition: all .3s;*/
+  /*bottom: -100px;*/
+  /*right: 30px;*/
+  /*cursor: pointer;*/
+  /*background: rgba(0,0,0,.4);*/
+  /*-webkit-transform: rotate(180deg);*/
+  /*transform: rotate(180deg);*/
+  /*opacity: 0;*/
+  /*z-index: 3;*/
+
+/*}*/
+
+/*.main-footer__up-btn.active {*/
+  /*opacity: 1;*/
+  /*bottom: 100px;*/
+/*}*/
+.main-footer__up-btn a:hover {
+  text-decoration: none;
+}
+
+#go_up {
+  position: fixed;
+  width: 50px;
+  height: 50px;
+  bottom: 60px;
+  right: 40px;
+  cursor: pointer;
+  text-decoration: none;
 }
