--- a/css/team.css
+++ b/css/team.css
@@ -1,5 +1,4 @@
-/*@import "libs/HeaderEffects/css/component.css";*/
-
+/*section team-------------------------------------------------*/
 
 .team {
   margin: 0 auto;
@@ -64,6 +63,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  z-index: 0;
 }
 .team__item:nth-child(n+5) {
   width: 33%;
@@ -308,14 +308,25 @@
 
 .main-header__menu-bg {
   background-color: rgb(255, 8, 68);
-  position: relative;
+  position: fixed;
   left: 0;
   top: 0;
   width: 100%;
   height: 60px;
   z-index: 1;
+  -webkit-transition: 500ms all ease-in-out;
+  -moz-transition: 500ms all ease-in-out;
+  -ms-transition: 500ms all ease-in-out;
+  -o-transition: 500ms all ease-in-out;
 }
 
+.menu-close {
+  -moz-transform: translateY(-100%);
+  -ms-transform: translateY(-100%);
+  -webkit-transform: translateY(-100%);
+  transform: translateY(-100%);
+  opacity: 0;
+}
 
 
 .img-phone {
@@ -477,7 +488,7 @@
 }
 
 .main-form__form {
-  width: auto;
+  /*width: auto;*/
   /* max-width: 370px; */
   /* display: inline-flex; */
   /* flex-direction: column; */
@@ -498,17 +509,17 @@
 .main-form__form .g-btn {
   margin: 40px auto;
 }
-.main-form__title {
-  width: auto;
-  max-width: 600px;
-  font-size: 60px;
-  font-family: "OpenSans", sans-serif;
-  color: rgb(255, 255, 255);
-  font-weight: bold;
-  line-height: 1.2;
-  text-align: left;
-  text-transform: initial;
-}
+/*.main-form__title {*/
+  /*width: 100%;*/
+  /*!*max-width: 600px;*!*/
+  /*font-size: 60px;*/
+  /*font-family: "OpenSans", sans-serif;*/
+  /*color: rgb(255, 255, 255);*/
+  /*font-weight: bold;*/
+  /*line-height: 1.2;*/
+  /*text-align: left;*/
+  /*text-transform: initial;*/
+/*}*/
 .main-form__title h2 {
   font-size: 60px;
   font-family: "OpenSans", sans-serif;
@@ -569,10 +580,12 @@
   margin-bottom: 0;
 }
 .main-aside__orange__contacts {
-  height: 60%;
+  height: 30%;
   justify-content: space-around;
+  min-height: 50px;
 }
 .main-aside__orange__menu {
+  min-height: 110px;
   position: relative;
   /* margin-bottom: 100px; */
   display: flex;
@@ -686,7 +699,7 @@
   height: 20vw;
   max-width: 262px;
   max-height: 262px;
-  z-index: 100;
+  z-index: 1000;
   margin: 0;
   position: absolute;
   top: 17px;
@@ -772,7 +785,7 @@
   padding: 0;
   position: absolute;
   top: 16px;
-  right: 80px;
+  right: calc(80px + 1.5%);
   height: auto;
 }
 
@@ -797,7 +810,6 @@
 }
 
 .main-header__top-banner {
-  background-image: url("../img/general/top-banner-bg.jpg");
   background-size: contain;
   background-position: top center;
   width: 100%;
@@ -820,10 +832,12 @@
 }
 
 .main-aside__orange {
-  padding: 90px 50px;
+  padding: 50px;
   width: 100%;
-   max-width: 100%;
-   min-width: 280px;
+  height: 100vh;
+  min-height: 395px;
+  max-width: 100%;
+  min-width: 280px;
   background-color: #ff0844;
   display: none;
   -webkit-box-orient: vertical;
@@ -831,12 +845,17 @@
   -ms-flex-direction: column;
   flex-direction: column;
   align-items: center;
+  position: fixed;
+  top: 60px;
+  right: 0;
+  overflow: auto;
 }
 .main-aside__orange__contacts {
   width: auto;
 }
 .main-aside__orange__social {
   width: 100%;
+  min-height: 50px;
   display: flex;
   justify-content: center;
   margin-left: 20px;
@@ -868,8 +887,15 @@
   /*opacity: 1;*/
   /*bottom: 100px;*/
 /*}*/
+
+
+
+
 .main-footer__up-btn a:hover {
   text-decoration: none;
+}
+.main-footer__up-btn img {
+  background-color: #222b4759;
 }
 
 #go_up {
@@ -880,4 +906,10 @@
   right: 40px;
   cursor: pointer;
   text-decoration: none;
+  text-align: center;
+  z-index: 1000;
+}
+
+.locked {
+  overflow: hidden;
 }
